<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ImportFragment">

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/importButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/fullReplaceRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/fullReplaceRadioButton" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/enrichmentRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enrichmentRadioButton" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/onlyNewRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onlyNewRadioButton" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/importButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/importButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg" />

</androidx.constraintlayout.widget.ConstraintLayout>